Main/podnew.yaml
apiVersion: v1
kind: Pod
metadata:
  name: firefox-pod
  labels:
    app: firefox
spec:
  containers:
  - name: firefox
    image: linuxserver/firefox
    ports:
    - containerPort: 3000
