Main/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: nginx.local  # Set the hostname to access the service (can be modified)
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-ser
